Update AI Gemini usage method

--- a/PythonAI1.ipynb
+++ b/PythonAI1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMufnOtgDpFIEZeaDLqwgNF",
+      "authorship_tag": "ABX9TyPKdaWig2nSz1+6upby7k8f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -413,7 +413,33 @@
     {
       "cell_type": "markdown",
       "source": [
-        "3. ใช้ AI ช่วยอธิบาย code ที่มีปัญหา เช่น"
+        "3. สั่งผ่าน AI console windows\n",
+        "\n",
+        "ทำการเปิด Gemini console windos แล้วพิมคำสั่งเช่น\n",
+        "\n",
+        "```\n",
+        " plot sine wave\n",
+        "```\n",
+        "\n",
+        "ทำการกด Accdept and run\n"
+      ],
+      "metadata": {
+        "id": "1zrj6Nw9Acsf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "5iYrtRqXAcY-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4. ใช้ AI ช่วยอธิบาย code ที่มีปัญหา เช่น"
       ],
       "metadata": {
         "id": "20VmU4AXNvcb"
@@ -425,27 +451,10 @@
         "print(x)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 142
-        },
-        "id": "9-G3FJY5NvF2",
-        "outputId": "ff3e7faf-9bb2-4775-ef59-dcdfeb5844ae"
+        "id": "9-G3FJY5NvF2"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'x' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-fc17d851ef81>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'x' is not defined"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
