--- a/PythonAI1.ipynb
+++ b/PythonAI1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKdaWig2nSz1+6upby7k8f",
+      "authorship_tag": "ABX9TyMH9jCrklZ53o5rUclt8uaN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -421,7 +421,7 @@
         " plot sine wave\n",
         "```\n",
         "\n",
-        "ทำการกด Accdept and run\n"
+        "ทำการกด Accept and run\n"
       ],
       "metadata": {
         "id": "1zrj6Nw9Acsf"
